# project_ws

./: .gitignore  README.md
humanoid/: g1_23dof.urdf  g1_29dof.urdf
humanoid_tennis/: README.md  generate_plots.py  package.xml  setup.cfg  setup.py
humanoid_tennis/humanoid_tennis/: 5x7_swing_node.py  basic_swing_node.py  simple_sim_node.py  swing_node.py  temp_node.py
humanoid_tennis/humanoid_tennis/utils/: TrajectoryUtils.py  TransformHelpers.py
humanoid_tennis/launch/: tennis_basic.launch.py
humanoid_tennis/submission_reqs/: main.tex
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/g1_description/share/g1_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/g1_description/share/g1_description/urdf/: g1_23dof.urdf
log/: latest_build
src/ball_spawner/: package.xml  setup.cfg  setup.py
src/ball_spawner/ball_spawner/: ball_spawner_node.py
src/g1_description/: CMakeLists.txt
src/g1_description/urdf/: g1_29dof.urdf
src/robots/: CMakeLists.txt
src/robots/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robots/install/robots/share/robots/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/robots/install/robots/share/robots/launch/: viewurdf.launch.py
src/robots/launch/: viewurdf.launch.py
src/robots/log/: latest_build
